# dart

./: CMakeLists.txt  Changelog.md  README  README.md  TODO.md  configure
cmake/: CMakeLists.txt  add_cxx_compiler_flag_if_supported.cmake  add_macros.cmake  beautify_find_GPISpace.cmake  beautify_find_boost.cmake  bundle.sh  doxygen.cmake  git.cmake  git_submodules.cmake  install_directory.cmake  require_compiler_version.cmake
cmake/modules/: FindASCIIDOC.cmake  FindGASPI.cmake  FindGPISpace.cmake  FindHWLOC.cmake  FindSourceHighlight.cmake  Findlibssh2.cmake
cmake/modules/detail/: pkgconfig_helper.cmake
doc/: Doxyfile  user_manual.md
docker/: Dockerfile-aarch64  Dockerfile-armhf  Dockerfile-x86_64  build_dart.sh  gpi2-aarch64.patch  gpi2-armhf.patch  gspc-20.12-capabilities.patch  gspc-20.12-no-qt-no-tests.patch  gspc-20.12-portable-archive.patch  gspc-aarch64.patch  gspc-armhf.patch
example/: add_workers.py  concurrent_futures_test.py  count_words.py  count_words_1.py  count_words_2.py  count_words_3.py  count_words_4.py  count_words_5.py
pip-package/: MANIFEST.in  setup.py
pip-package/dart/: dart.py
pip-package/dart/bundle/gpispace/libexec/bundle/lib/: libboost_iostreams.so.1.61.0  libboost_regex.so.1.61.0  libgcc_s.so.1  libudev.so.1
pip-package/dart/bundle/gpispace/libexec/gspc/: gpi-space
pip-package/dart/bundle/lib/: libboost_atomic.so.1.61.0  libboost_filesystem.so.1.61.0  libboost_program_options.so.1.61.0  libboost_python.so.1.61.0  libboost_system.so.1.61.0
pip-package/dart/example/: concurrent_futures_test.py  count_words_2.py  count_words_4.py  dart_task.py  nodefile  out
pip-package/dart/example/.ipynb_checkpoints/: count_words_3-checkpoint.py
pip-package/dart/lib/: dart_task.py
pip-package/dart/lib/.ipynb_checkpoints/: dart_task-checkpoint.py
pip-package/dart/libexec/bundle/gpispace/: revision
pip-package/dart/libexec/bundle/gpispace/libexec/bundle/lib/: libboost_chrono.so.1.61.0  libboost_serialization.so.1.61.0  libboost_thread.so.1.61.0  libdw.so.1  libltdl.so.7
pip-package/dart/libexec/bundle/lib/: libboost_context.so.1.61.0  libboost_coroutine.so.1.61.0  libboost_date_time.so.1.61.0  libpython3.7m.so.1.0
pip-package/dart/workflow/: dart_workflow.pnet
python/: dart.py
src/: installation.cpp  installation.hpp
src/cpp/: dart_module.cpp  drts_interface.cpp  drts_interface.hpp  handle_error.hpp  python3_functions.hpp  result_storage.hpp  task_interface.hpp  task_result.cpp  task_result.hpp
src/cpp/result_storages/: python_storage.cpp  python_storage.hpp  ram_storage.cpp  ram_storage.hpp
src/dart-server/: dart_server.cpp  dart_server.hpp  gspc_interface.cpp  gspc_interface.hpp  installation.cpp  installation.hpp  job_storage.hpp  main.cpp
src/dart-server/job_storages/: ram_storage.cpp  ram_storage.hpp
src/http/: client.cpp  client.hpp  message.cpp  message.hpp  message_builder.cpp  message_builder.hpp  server.cpp  server.hpp  status_code.cpp  status_code.hpp  url.hpp  version.hpp
src/http/old/: request.cpp  request.hpp  request_builder.cpp  request_builder.hpp  response.cpp  response.hpp
src/log/: log.cpp  log.hpp
src/net/: io_pool.cpp  io_pool.hpp  types.hpp
src/python/: dart.py
src/rest/: message.cpp  message.hpp  router.cpp  router.hpp
src/rest/old/: client.cpp  client.hpp  router.cpp  router.hpp  send_request.hpp  server.cpp  server.hpp  session.cpp  session.hpp
src/utils/: get_public_worker_name.hpp  utils.hpp
src/workflow/: get_public_worker_name.hpp  handle_error.hpp  load_worker_config.hpp  python3_functions.hpp  task_interface.hpp
test/: CMakeLists.txt  errors_and_exceptions.cpp  exceptions.py  http_test.cpp  parsing_errors.py
utils/: _ports.py  dart-create-nodefile-slurm  dart-get-hosts-carme  dart-stop-all
worker/: worker.json
workflow/: dart_workflow.xpnet
